--- a/cad-GymService/src/main/resources/application.properties
+++ b/cad-GymService/src/main/resources/application.properties
@@ -3,4 +3,4 @@ server.forward-headers-strategy=framework
 server.servlet.context-path=/gym
 spring.cloud.gcp.project-id=cad-gym-app
 spring.cloud.gcp.credentials.location=classpath:tf_service_account_key.json
-spring.cloud.gcp.bucket.name={GYM_BUCKET_TYPE}
+spring.cloud.gcp.bucket.name=${GYM_BUCKET_TYPE}
