Add bucket type as env var

--- a/helm/cad-gymapp/templates/gym-service-deployment.yaml
+++ b/helm/cad-gymapp/templates/gym-service-deployment.yaml
@@ -17,6 +17,12 @@ spec:
       containers:
         - name: gym-service
           image: {{ .Values.gymService.image }}
+          env:
+            - name: GYM_BUCKET_TYPE
+              valueFrom:
+                configMapKeyRef:
+                  name: gym-service-configmap
+                  key: gym_bucket_type
           imagePullPolicy: {{ .Values.imagePullPolicy }}
           ports:
             - containerPort: 7081
