--- a/helm/gymapp-prod-enterprise-deployment.yaml
+++ b/helm/gymapp-prod-enterprise-deployment.yaml
@@ -12,6 +12,7 @@ frontend:
 
 gymService:
   image: europe-west3-docker.pkg.dev/cad-gym-app/cad-repo-prod/cad-gym-gym-service:latest
+  gymBucketType: "gym-bucket-prod"
 
 invoiceCronjob:
   image: europe-west3-docker.pkg.dev/cad-gym-app/cad-repo-prod/cad-gym-invoice-cronjob:latest
