--- a/helm/gymapp-prod-free-deployment.yaml
+++ b/helm/gymapp-prod-free-deployment.yaml
@@ -7,6 +7,7 @@ frontend:
   
 gymService:
   image: europe-west3-docker.pkg.dev/cad-gym-app/cad-repo-prod/cad-gym-gym-service:latest
+  gymBucketType: "gym-bucket-prod"
   
 invoiceCronjob:
   image: europe-west3-docker.pkg.dev/cad-gym-app/cad-repo-prod/cad-gym-invoice-cronjob:latest
