- Enable manual workflow trigger - Fix monitoring dashboard creation - Fix is_not_windows check

--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -9,6 +9,7 @@ name: Build and Deploy
 # - When pushing was successful, deploy the application
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - master
